discussion/kv_engine/147187/147187_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-44585: Refactor HDRHistogram constructor

Reduce code duplication by calling resize()

Change-Id: I4ee3696c00d8d9c996ba8c84604ce3b5ff812d49

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2021-02-26 17:22:25.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-02-26 17:47:28.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9042/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9042/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9253/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16804/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16804/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7303/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.cc:300:9: error: use of undeclared identifier "lowestTrackableValue"; did you mean "highestTrackableValue"? [clang-diagnostic-error]
    if (lowestTrackableValue >= highestTrackableValue ||
        ^~~~~~~~~~~~~~~~~~~~
        highestTrackableValue
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.cc:298:36: note: "highestTrackableValue" declared here
                          uint64_t highestTrackableValue,
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.cc:305:32: error: use of undeclared identifier "lowestTrackableValue"; did you mean "highestTrackableValue"? [clang-diagnostic-error]
                std::to_string(lowestTrackableValue) +
                               ^~~~~~~~~~~~~~~~~~~~
                               highestTrackableValue
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.cc:298:36: note: "highestTrackableValue" declared here
                          uint64_t highestTrackableValue,
                                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7303/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.cc:300:9:
error: use of undeclared identifier "lowestTrackableValue"; did you mean "highestTrackableValue"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7303/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33858/ : FAILURE

Compile error at ..\kv_engine\utilities\hdrhistogram.cc(300): error C2065: "lowestTrackableValue": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33858/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29098/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/utilities/hdrhistogram.cc:300:9:
error: use of undeclared identifier "lowestTrackableValue"; did you mean "highestTrackableValue"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29098/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8905/ : FAILURE

Compile error at [2021-02-26T17:45:56.196Z] ../kv_engine/utilities/hdrhistogram.cc:300:9:
error: ?lowestTrackableValue? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8905/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7961/ : FAILURE

Compile error at [2021-02-26T17:34:03.866Z] ../kv_engine/utilities/hdrhistogram.cc:300:9:
error: use of undeclared identifier "lowestTrackableValue"; did you mean "highestTrackableValue"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7961/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5839/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
